Create and style front end

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,42 @@
     <script src="js.js"></script>
     <link href="css.css" rel="stylesheet">
 </head>
+
 <body>
-    
+<h1>Calculator</h1>
+    <div id="calculator">
+        <div class="row">
+            <button class="equals">=</button>
+
+            <div class="screen"><span>123*345</span></div>
+        </div>
+        <div class="row">
+            <button id="add">+</button>
+            <button id="clear">Clear</button>
+            <button id="point">.</button>
+
+            <button id="num btn-0">0</button>
+        </div>
+        <div class="row">
+            <button id="subtract">-</button>
+            <button id="num btn-1">1</button>
+            <button id="num btn-2">2</button>
+            <button id="num btn-3">3</button>
+
+        </div>
+        <div class="row">
+            <button id="multiply">*</button>
+            <button id="num btn-4">4</button>
+            <button id="num btn-5">5</button>
+            <button id="num btn-6">6</button>
+        </div>
+        <div class="row">
+            <button id="divide">/</button>
+            <button id="num btn-7">7</button>
+            <button id="num btn-8">8</button>
+            <button id="num btn-9">9</button>
+        </div>
+    </div>
 </body>
+
 </html>
