--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <script src="js.js"></script>
+    <script src="js.js" defer></script>
     <link href="css.css" rel="stylesheet">
 </head>
 
@@ -15,7 +15,7 @@
         <div class="row">
             <button class="equals">=</button>
 
-            <div class="screen"><span>123*345</span></div>
+            <div class="screen"><span>12345*</span></div>
         </div>
         <div class="row">
             <button id="add">+</button>
