Add Divide by zero message

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <button id="num btn-8">8</button>
             <button id="num btn-9">9</button>
         </div>
+        <div class="row zero">You can't divide by zero!</div>
     </div>
 </body>
 
