improve readability of has Operation in string check

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
             <button class="equals">=</button>
 
-            <div class="screen"><span>12345*</span></div>
+            <div class="screen"><span>1+1</span></div>
         </div>
         <div class="row">
             <button id="add">+</button>
